grid alignment issue fixed

--- a/app/styles/modules/_grid.scss
+++ b/app/styles/modules/_grid.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-content: flex-start;
-  justify-content: space-between;
+  justify-content: flex-start;
   @include bp-small {
     margin-top: -$grid--gutter;
     margin-bottom: $grid--gutter;
